--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,5 +2,5 @@ spring.application.name=spring-ai-rag
 
 spring.ai.openai.api-key=${OPENAI_API_KEY}
 
-# Active profile
+# Active profile (dev | prod)
 spring.profiles.active=dev
